@startuml
abstract class ImageReaderFactory {
    + {static} createImageReader(): ImageReader
}

class GifReaderFactory {
    + {static} createImageReader(): ImageReader
}

class JpgReaderFactory {
    + {static} createImageReader(): ImageReader
}

abstract class ImageReader {
    +read(): void
}

class GifReader {
    +read(): void
}

class JpgReader {
    +read(): void
}

GifReaderFactory -up-|> ImageReaderFactory
JpgReaderFactory -up-|> ImageReaderFactory

GifReader -up-|> ImageReader
JpgReader -up-|> ImageReader

GifReaderFactory .right.> GifReader
JpgReaderFactory .right.> JpgReader

note as annotation
  AUTHOR : ShuJie Huang
  DATE : 2022.12.17 19:37
end note

@enduml